fixed footer spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -16,64 +16,66 @@ main {
 
     .container {
         height: 100%;
-    }
+        }
 
-    .top {
+    #top {
         display: flex;
         align-items: center;
         height: 80%;
         font-size: 20px;
 
-        .header {
+        #header {
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
             height: 100%;
-        }
 
-        // p {
-        //     padding: 1rem;
-        // }
-    
-        h1 {
-            font-size: 50px;
-            padding: 2rem;
-
-            span {
-                color: #7516ce;
+            #head{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                padding: 4rem;
+                height: 80%;
             }
-        }
+            h1 {
+                font-size: 80px;
     
-        h3 {
-            padding-bottom: 2rem;
-        }
-    
-        button {
-            width: 20%;
-            border-radius: 50px;
-            background-color: #7516ce;
-        }
-        button:hover {
-            background-color: white;
+                span {
+                    color: #7516ce;
+                }
+            }
+            button {
+                background-color: #7516ce;
+                color: white;
+                border-radius: 50px;
+            }
+            button:hover {
+                background-color: #8c56be;
+            }
         }
     }
 
-    .duration {
+    #duration {
         border-left: solid;
         border-right: solid;
-        border-color: black;
+        border-color: white;
     }
 }
 
 footer {
+    display: flex;
+    align-items: center;
     height: 10%;
     background-color: lightgray;
 
-    .nav {
+    a {
         color: black;
         text-decoration: none;
         text-align: center;
         height: 100%;
-        border: solid;
+    }
+    a:hover{
+        color: blue;
     }
 }
